--- a/tsconfig-build.json
+++ b/tsconfig-build.json
@@ -1,4 +1,8 @@
 {
   "extends": "./tsconfig.json",
   "include": [ "lib" ],
+  "exclude": [
+    "lib/**/*.stories.ts",
+    "lib/**/*.stories.tsx"
+  ],
 }
