--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,5 +21,9 @@
     "noFallthroughCasesInSwitch": true
   },
   "include": ["src", "lib"],
-  "references": [{ "path": "./tsconfig.node.json" }]
+  "references": [{ "path": "./tsconfig.node.json" }],
+  "exclude": [
+    "lib/**/*.stories.ts",
+    "lib/**/*.stories.tsx"
+  ],
 }
