--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,10 +20,12 @@
     "noUnusedParameters": true,
     "noFallthroughCasesInSwitch": true
   },
-  "include": ["src", "lib"],
+  "include": ["lib"],
   "references": [{ "path": "./tsconfig.node.json" }],
   "exclude": [
     "lib/**/*.stories.ts",
-    "lib/**/*.stories.tsx"
+    "lib/**/*.stories.tsx",
+    "lib/**/*.spec.ts",
+    "lib/**/*.spec.tsx"
   ],
 }
