--- a/package.json
+++ b/package.json
@@ -14,8 +14,8 @@
     "preview": "vite preview",
     "storybook": "storybook dev -p 6006",
     "build-storybook": "storybook build",
-    "test": "vitest run",
-    "coverage": "vitest run --coverage",
+    "test": "playwright test -c playwright-ct.config.ts",
+    "coverage": "bun run test && playwright show-report",
     "prepublish": "bun run build"
   },
   "peerDependencies": {
@@ -24,6 +24,8 @@
   },
   "devDependencies": {
     "@chromatic-com/storybook": "^1.3.3",
+    "@playwright/experimental-ct-react": "^1.44.0",
+    "@playwright/test": "^1.44.0",
     "@storybook/addon-designs": "^8.0.0",
     "@storybook/addon-essentials": "^8.0.9",
     "@storybook/addon-interactions": "^8.0.9",
