--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,9 +18,9 @@
     "strict": true,
     "noUnusedLocals": true,
     "noUnusedParameters": true,
-    "noFallthroughCasesInSwitch": true
+    "noFallthroughCasesInSwitch": true,
   },
-  "include": ["lib"],
+  "include": ["lib", "test"],
   "references": [{ "path": "./tsconfig.node.json" }],
   "exclude": [
     "lib/**/*.stories.ts",
