--- a/package.json
+++ b/package.json
@@ -23,7 +23,6 @@
     "react-dom": "^18.3.1"
   },
   "devDependencies": {
-    "@chromatic-com/storybook": "^1.3.3",
     "@playwright/experimental-ct-react": "^1.44.0",
     "@playwright/test": "^1.44.0",
     "@storybook/addon-designs": "^8.0.0",
@@ -31,6 +30,7 @@
     "@storybook/addon-interactions": "^8.0.9",
     "@storybook/addon-links": "^8.0.9",
     "@storybook/addon-onboarding": "^8.0.9",
+    "@storybook/addon-themes": "^8.1.5",
     "@storybook/blocks": "^8.0.9",
     "@storybook/react": "^8.0.9",
     "@storybook/react-vite": "^8.0.9",
